Lisättiin käännöksiä Lisättiin käännöksiä MiuiVideoGlobal.apk

--- a/Finnish/main/MiuiVideoGlobal.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/MiuiVideoGlobal.apk/res/values-fi-rFI/strings.xml
@@ -291,89 +291,89 @@ Kaikki verkosta löytyvät tekstitykset tarjoaa opensubtitles.org."</string>
   <string name="ovp_detail_deeplink_plugin_downloading">Ladataan liitännäistä</string>
   <string name="ovp_detail_deeplink_plugin_install_error">Liitännäistä ei voitu asentaa</string>
   <string name="ovp_detail_deeplink_unCollect">Poistettiin suosikeista</string>
-  <string name="ovp_detail_douban_score">Douban rating</string>
-  <string name="ovp_detail_download">Download</string>
-  <string name="ovp_detail_has_empty_cp">"Video isn't available now."</string>
-  <string name="ovp_detail_more_episode">MORE</string>
-  <string name="ovp_detail_more_summary">More</string>
-  <string name="ovp_detail_require_pay">For rent</string>
-  <string name="ovp_detail_require_subscription">Requires subscription</string>
-  <string name="ovp_detail_score">"Rating: "</string>
-  <string name="ovp_detail_shortcut">Shortcut</string>
-  <string name="ovp_detail_summary">Summary</string>
-  <string name="ovp_detail_v_all_episode">All episodes</string>
-  <string name="ovp_detail_v_episode">Episode</string>
-  <string name="ovp_detail_v_episode_all">Episodes: %2$d/%1$d</string>
-  <string name="ovp_detail_v_episode_count">Updated to episode %d</string>
-  <string name="ovp_detail_v_episode_download_null">"Can't download this episode"</string>
-  <string name="ovp_detail_v_variety_episode_count">Updated to season %s</string>
-  <string name="ovp_episode_suffix">"Ep. %d "</string>
-  <string name="ovp_favor">Favorites</string>
-  <string name="ovp_favor_null">No items here.</string>
-  <string name="ovp_feedback_title">Mi Video Feedback</string>
-  <string name="ovp_home_folder_is_null_jump_upfolder_tip">"Couldn't find media file. Jumped to the upper-level folder."</string>
-  <string name="ovp_home_item_camera">Gallery</string>
-  <string name="ovp_home_item_download">Downloads</string>
-  <string name="ovp_home_item_folder">Files</string>
+  <string name="ovp_detail_douban_score">Douban arvostelu</string>
+  <string name="ovp_detail_download">Lataa</string>
+  <string name="ovp_detail_has_empty_cp">Video ei ole saatavilla juuri nyt.</string>
+  <string name="ovp_detail_more_episode">LISÄÄ</string>
+  <string name="ovp_detail_more_summary">Lisää</string>
+  <string name="ovp_detail_require_pay">Vuokrattavissa</string>
+  <string name="ovp_detail_require_subscription">Vaatii tilauksen</string>
+  <string name="ovp_detail_score">"Arvostelu: "</string>
+  <string name="ovp_detail_shortcut">Pikakuvake</string>
+  <string name="ovp_detail_summary">Yhteenveto</string>
+  <string name="ovp_detail_v_all_episode">Kaikki jaksot</string>
+  <string name="ovp_detail_v_episode">Jakso</string>
+  <string name="ovp_detail_v_episode_all">Jaksot: %2$d/%1$d</string>
+  <string name="ovp_detail_v_episode_count">Päivitettiin jaksoon %d</string>
+  <string name="ovp_detail_v_episode_download_null">Tätä jaksoa ei voi ladata</string>
+  <string name="ovp_detail_v_variety_episode_count">Päivitettiin tuotantokauteen %s</string>
+  <string name="ovp_episode_suffix">"Jakso %d "</string>
+  <string name="ovp_favor">Suosikit</string>
+  <string name="ovp_favor_null">Täällä ei ole kohteita.</string>
+  <string name="ovp_feedback_title">Mi Videon Palaute</string>
+  <string name="ovp_home_folder_is_null_jump_upfolder_tip">Mediatiedostoa ei löytynyt. Siirryttiin ylemmän tason kansioon.</string>
+  <string name="ovp_home_item_camera">Galleria</string>
+  <string name="ovp_home_item_download">Lataukset</string>
+  <string name="ovp_home_item_folder">Tiedostot</string>
   <string name="ovp_home_online_content_title">Online</string>
-  <string name="ovp_info_video_loading">Just a sec…</string>
-  <string name="ovp_load_playinfo_failure">"Couldn't get info"</string>
-  <string name="ovp_loading_video_netplay_label_v5">Just a sec…</string>
-  <string name="ovp_local_videos_title">Local videos</string>
-  <string name="ovp_navigation_category">Category</string>
-  <string name="ovp_navigation_favorites">Favorites</string>
-  <string name="ovp_navigation_feedback">Feedback</string>
-  <string name="ovp_navigation_history">History</string>
-  <string name="ovp_navigation_home">Home</string>
-  <string name="ovp_navigation_localvideo">Local</string>
-  <string name="ovp_navigation_setting">Settings</string>
-  <string name="ovp_plugin_install_failure">"Couldn't install plug-in"</string>
-  <string name="ovp_search_key_not_null">Enter keywords to search</string>
-  <string name="ovp_select_ci">Select episode</string>
-  <string name="ovp_select_related_video">Related videos</string>
-  <string name="ovp_setting_clear_cache_success">Cleared cache successfully</string>
-  <string name="ovp_setting_clear_cache_text">Clear cache files saved on your device</string>
-  <string name="ovp_setting_clear_cache_title">Clear cache</string>
-  <string name="ovp_setting_privacy_policy_title">Privacy Policy</string>
-  <string name="ovp_setting_privacy_switch_tips">"Some features won't be available if you revoke authorization"</string>
-  <string name="ovp_setting_privacy_switch_title">Authorization &amp; revocation</string>
-  <string name="ovp_setting_version_info_title">Version</string>
-  <string name="ovp_start_error_msg">"Can't play this video"</string>
-  <string name="ovp_video_bad_network_condition">"Couldn't connect to the network."</string>
-  <string name="ovp_video_create_video_error_info">"Couldn't initialize plug-in. Wait a minute and try again."</string>
-  <string name="ovp_video_invalid_cp_info">"Couldn't load info. Restart the app."</string>
-  <string name="ovp_video_loading">About to play %1$s…</string>
-  <string name="ovp_video_plugin_installation">Installing %1$s…</string>
-  <string name="ovp_video_plugin_installation_failure">"Couldn't install %1$s"</string>
-  <string name="ovp_video_plugin_installation_two">Just a sec…</string>
-  <string name="password_toggle_content_description">Toggle password visibility</string>
-  <string name="ping_platform">APP</string>
-  <string name="ping_property">movie</string>
-  <string name="player_replay_btn_text">replay</string>
-  <string name="pull_to_refresh_from_bottom_pull_label">Pull up to refresh…</string>
-  <string name="pull_to_refresh_from_bottom_refreshing_label">Just a sec…</string>
-  <string name="pull_to_refresh_from_bottom_release_label">Release to refresh…</string>
-  <string name="pull_to_refresh_pull_label">Pull down to refresh…</string>
-  <string name="pull_to_refresh_refreshing_label">Just a sec…</string>
-  <string name="pull_to_refresh_release_label">Release to refresh…</string>
-  <string name="push_message_switch">Push message</string>
-  <string name="push_message_tips">Turn on to get push message</string>
-  <string name="pw_category">Categories</string>
-  <string name="pw_click_channel_scrol_to_top">Tap again to go back on top</string>
-  <string name="pw_comment_back">Back</string>
-  <string name="pw_comment_detail">Details</string>
-  <string name="pw_comment_let_me_comment">I have a comment…</string>
-  <string name="pw_comment_reply" formatted="false">%s&lt;font color=#959AA0&gt;Reply&lt;/font&gt;%s</string>
-  <string name="pw_comment_reply_to">Reply to %s</string>
-  <string name="pw_comment_send">Send</string>
-  <string name="pw_comment_type_all">All comments</string>
-  <string name="pw_comment_type_hot">Popular comments</string>
-  <string name="pw_comment_write_comment">Add a comment…</string>
-  <string name="pw_comment_write_comment2">Add a comment</string>
-  <string name="pw_debug_close">Turn off</string>
-  <string name="pw_debug_close_log">Turn off debugging</string>
-  <string name="pw_debug_open_log">Turn on debugging</string>
-  <string name="pw_enter_detail">View details</string>
+  <string name="ovp_info_video_loading">Odota hetki…</string>
+  <string name="ovp_load_playinfo_failure">Tietoja ei voitu hakea</string>
+  <string name="ovp_loading_video_netplay_label_v5">Odota hetki…</string>
+  <string name="ovp_local_videos_title">Paikalliset videot</string>
+  <string name="ovp_navigation_category">Kategoria</string>
+  <string name="ovp_navigation_favorites">Suosikit</string>
+  <string name="ovp_navigation_feedback">Palaute</string>
+  <string name="ovp_navigation_history">Historia</string>
+  <string name="ovp_navigation_home">Koti</string>
+  <string name="ovp_navigation_localvideo">Paikallinen</string>
+  <string name="ovp_navigation_setting">Asetukset</string>
+  <string name="ovp_plugin_install_failure">Liitännäistä ei voitu asentaa</string>
+  <string name="ovp_search_key_not_null">Hae antamalla avainsanoja</string>
+  <string name="ovp_select_ci">Valitse jakso</string>
+  <string name="ovp_select_related_video">Samankaltaisia videoita</string>
+  <string name="ovp_setting_clear_cache_success">Välimuisti tyhjennettiin onnistuneesti</string>
+  <string name="ovp_setting_clear_cache_text">Tyhjennä laitteellesi tallennetut välimuistitiedostot</string>
+  <string name="ovp_setting_clear_cache_title">Tyhjennä välimuisti</string>
+  <string name="ovp_setting_privacy_policy_title">Tietosuojakäytäntö</string>
+  <string name="ovp_setting_privacy_switch_tips">Joitakin ominaisuuksia ei ole saatavilla jos peruutat valtuutuksen</string>
+  <string name="ovp_setting_privacy_switch_title">Valtuuttaminen &amp; peruutus</string>
+  <string name="ovp_setting_version_info_title">Versio</string>
+  <string name="ovp_start_error_msg">Tätä videota ei voi toistaa</string>
+  <string name="ovp_video_bad_network_condition">Verkkoyhteyttä ei voitu muodostaa.</string>
+  <string name="ovp_video_create_video_error_info">Liitännäistä ei voitu käynnistää. Odota minuutti ja yritä uudelleen.</string>
+  <string name="ovp_video_invalid_cp_info">Tietoja ei voitu ladata. Käynnistä sovellus uudelleen.</string>
+  <string name="ovp_video_loading">Toistetaan %1$s…</string>
+  <string name="ovp_video_plugin_installation">Asennetaan %1$s…</string>
+  <string name="ovp_video_plugin_installation_failure">Liitännäistä %1$s ei voitu asentaa</string>
+  <string name="ovp_video_plugin_installation_two">Odota hetki…</string>
+  <string name="password_toggle_content_description">Muuta salasanan näkyvyyttä</string>
+  <string name="ping_platform">SOVELLUS</string>
+  <string name="ping_property">Elokuva</string>
+  <string name="player_replay_btn_text">Uusinta</string>
+  <string name="pull_to_refresh_from_bottom_pull_label">Päivitä vetämällä ylöspäin…</string>
+  <string name="pull_to_refresh_from_bottom_refreshing_label">Odota hetki…</string>
+  <string name="pull_to_refresh_from_bottom_release_label">Vapauta päivittääksesi…</string>
+  <string name="pull_to_refresh_pull_label">Päivitä vetämällä alaspäin…</string>
+  <string name="pull_to_refresh_refreshing_label">Odota hetki…</string>
+  <string name="pull_to_refresh_release_label">Vapauta päivittääksesi…</string>
+  <string name="push_message_switch">Push-viesti</string>
+  <string name="push_message_tips">Ota käyttöön saadaksesi push-viestejä</string>
+  <string name="pw_category">Kategoriat</string>
+  <string name="pw_click_channel_scrol_to_top">Siirry takaisin ylös napauttamalla uudelleen</string>
+  <string name="pw_comment_back">Takaisin</string>
+  <string name="pw_comment_detail">Tiedot</string>
+  <string name="pw_comment_let_me_comment">Minulla on kommentti…</string>
+  <string name="pw_comment_reply" formatted="false">%sVastaa%s</string>
+  <string name="pw_comment_reply_to">Vastaa %s</string>
+  <string name="pw_comment_send">Lähetä</string>
+  <string name="pw_comment_type_all">Kaikki kommentit</string>
+  <string name="pw_comment_type_hot">Suositut kommentit</string>
+  <string name="pw_comment_write_comment">Lisää kommentti…</string>
+  <string name="pw_comment_write_comment2">Lisää kommentti</string>
+  <string name="pw_debug_close">Poista käytöstä</string>
+  <string name="pw_debug_close_log">Poista virheenkorjaus käytöstä</string>
+  <string name="pw_debug_open_log">Ota virheenkorjaus käyttöön</string>
+  <string name="pw_enter_detail">Näytä tiedot</string>
   <string name="pw_filter_empty">"Couldn't find results.
 Check out other videos!"</string>
   <string name="pw_filter_no_result">"Couldn't find results. Try a different set of filters."</string>
