Muutettiin käännös Muutettiin Mene Asetuksiin käännös Siirry Asetuksiin

--- a/Finnish/main/Backup.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/Backup.apk/res/values-fi-rFI/strings.xml
@@ -218,7 +218,7 @@ https://appleid.apple.com/#!&amp;page=signin poistaaksesi käytöstä"</string>
   <string name="err_user_abort">Käyttäjän peruuttama.</string>
   <string name="err_version_too_old">Varmuuskopion tiedosto on liian vanha.</string>
   <string name="err_version_unsupported">Varmuuskopion versio ei ole tuettu.</string>
-  <string name="error_permissions">Tällä sovelluksella ei ole tarvittavia käyttöoikeuksia käyttää Kalenteria. Mene Asetuksiin ja tarkista käyttöoikeudet jatkaaksesi.</string>
+  <string name="error_permissions">Tällä sovelluksella ei ole tarvittavia käyttöoikeuksia käyttää Kalenteria. Siirry Asetuksiin ja tarkista käyttöoikeudet jatkaaksesi.</string>
   <string name="every_day">Joka päivä</string>
   <string name="exchange_account">Vaihda tilejä</string>
   <string name="fail">Epäonnistui</string>
