--- a/Finnish/main/PersonalAssistant.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/PersonalAssistant.apk/res/values-fi-rFI/strings.xml
@@ -502,7 +502,7 @@
   <string name="empty_health_card_login_tip_vip">Kirjaudu sisään Mi Fit -sovellukseen ja ota askelmittari käyttöön.</string>
   <string name="empty_health_card_tip">Asenna Mi Fit -sovellus ja muodosta laitepariyhteys laitteen Mi Band kanssa.</string>
   <string name="empty_health_card_tip_vip">Asenna Mi Fit -sovellus ja ota askelmittari käyttöön.</string>
-  <string name="empty_recharge_card_btn">Mene Asetuksiin</string>
+  <string name="empty_recharge_card_btn">Siirry Asetuksiin</string>
   <string name="empty_recharge_card_tip">Näyttää siltä, ettet ole asentanut SIM-korttia tai et ole asettanut datapakettiasi</string>
   <string name="empty_recharge_card_title">Ei tietoa</string>
   <string name="entrance">Korttien pikakuvakkeet</string>
