Lisättiin käännöksiä MiuiVideoGlobal.apk kääntäminen valmis.

--- a/Finnish/main/MiuiVideoGlobal.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/MiuiVideoGlobal.apk/res/values-fi-rFI/strings.xml
@@ -374,85 +374,81 @@ Kaikki verkosta löytyvät tekstitykset tarjoaa opensubtitles.org."</string>
   <string name="pw_debug_close_log">Poista virheenkorjaus käytöstä</string>
   <string name="pw_debug_open_log">Ota virheenkorjaus käyttöön</string>
   <string name="pw_enter_detail">Näytä tiedot</string>
-  <string name="pw_filter_empty">"Couldn't find results.
-Check out other videos!"</string>
-  <string name="pw_filter_no_result">"Couldn't find results. Try a different set of filters."</string>
-  <string name="pw_onlineservice_close_info">"You won't be able to play latest videos after you turn this feature off."</string>
-  <string name="pw_onlineservice_close_title">Attention</string>
-  <string name="pw_onlineservice_open_info">Turn on online services to use this feature.</string>
-  <string name="pw_onlineservice_open_title">Attention</string>
-  <string name="pw_people_search">Popular</string>
-  <string name="pw_permission_content">"You won't be able to use Mi Video without the required permissions."</string>
-  <string name="pw_permission_refuse">Restrict anyway</string>
-  <string name="pw_permission_retry">Allow</string>
-  <string name="pw_permission_title">Permissions required</string>
-  <string name="pw_score">Rating</string>
-  <string name="pw_search_hint">Enter keywords to search</string>
-  <string name="pw_search_history_clear">Clear search history</string>
-  <string name="pw_splash_ignore">Skip</string>
-  <string name="pw_ui_card_banner_btn_download">Download</string>
-  <string name="pw_ui_card_banner_btn_downloading">Downloading…</string>
-  <string name="pw_ui_card_banner_btn_open">Open</string>
-  <string name="pw_uitype_next">Next type</string>
-  <string name="pw_uitype_title">UI type %d</string>
-  <string name="pw_video_category">Categories</string>
-  <string name="pw_video_history">Playback history</string>
-  <string name="pw_video_mine">My videos</string>
-  <string name="pw_video_offline">Local videos</string>
-  <string name="recommend_online_switch">Online recommendation</string>
-  <string name="recommend_online_tips">Turn on to get recommended online video</string>
-  <string name="recommend_page_replay">REPLAY</string>
-  <string name="retry">Try again</string>
-  <string name="revoke">Revoke</string>
-  <string name="s1">Save image</string>
-  <string name="s2">Allow Ad to store image in Picture gallery?</string>
-  <string name="s3">Accept</string>
-  <string name="s4">Decline</string>
-  <string name="s5">Create calendar event</string>
-  <string name="s6">Allow Ad to create a calendar event?</string>
-  <string name="save">Save</string>
-  <string name="screenrecord_cancel">Compatibility issues</string>
-  <string name="screenrecord_nosupport_record">"Screen recorder isn't currently supported on this device."</string>
-  <string name="search">Search</string>
-  <string name="search_menu_title">Search</string>
-  <string name="selectall">Select all</string>
-  <string name="selectnull">Deselect all</string>
-  <string name="session_create_error">Server returned SESSION CREATE ERROR code, please contact SDK developers!</string>
-  <string name="signup_type_silent_default">silent</string>
-  <string name="signup_type_user_default">LoginSDK consumer</string>
-  <string name="silent_username_limit">50</string>
-  <string name="storage_permission_denied">Permission to access storage was denied</string>
-  <string name="symbol_rmb">¥</string>
-  <string name="t_downloading">Downloading:</string>
-  <string name="t_exit_app">Tap again to exit.</string>
-  <string name="t_lv_check_delete_history">Select items to delete</string>
-  <string name="t_lv_check_hide_file">Select videos to hide</string>
-  <string name="t_lv_check_unhide_file">Select videos to unhide</string>
-  <string name="t_lv_downloading_new_version">Downloading updates…</string>
-  <string name="t_lv_no_new_version">Mi Video is up to date.</string>
-  <string name="t_lv_password_limit">Password should be at least 4 characters long</string>
-  <string name="t_lv_password_null">"Password can't be empty"</string>
-  <string name="t_lv_password_wrong">Password is incorrect. Try again.</string>
-  <string name="t_lv_search_null">Enter keywords to search</string>
-  <string name="t_lv_subtitle_padding_default_hint">Adjusting subtitles…</string>
-  <string name="t_network_error">A network error occurred.</string>
-  <string name="t_ovp_check_delete_favor">Select items to remove</string>
-  <string name="t_start_download">Start downloading:</string>
-  <string name="txt_cancel_download">CANCEL TRANSFER</string>
-  <string name="txt_download_complete">Download Completed</string>
-  <string name="txt_watch_now">WATCH NOW</string>
-  <string name="ui_log_tip">Tap this area to hide, press and hold to clear old logs. Drag logs manually.</string>
-  <string name="update">Update</string>
+  <string name="pw_filter_empty">"Tuloksia ei löytynyt.
+Katso muita videoita!"</string>
+  <string name="pw_filter_no_result">Tuloksia ei löytynyt. Kokeile muuttaa suodattimia.</string>
+  <string name="pw_onlineservice_close_info">Et pysty toistamaan uusimpia videoita jos poistat tämän ominaisuuden käytöstä.</string>
+  <string name="pw_onlineservice_close_title">Huomio</string>
+  <string name="pw_onlineservice_open_info">Ota online-palvelut käyttöön käyttääksesi tätä ominaisuutta.</string>
+  <string name="pw_onlineservice_open_title">Huomio</string>
+  <string name="pw_people_search">Suosittu</string>
+  <string name="pw_permission_content">Et voi käyttää Mi Videota ilman vaadittuja käyttöoikeuksia.</string>
+  <string name="pw_permission_refuse">Rajoita siitä huolimatta</string>
+  <string name="pw_permission_retry">Salli</string>
+  <string name="pw_permission_title">Käyttöoikeuksia vaaditaan</string>
+  <string name="pw_score">Arvostelu</string>
+  <string name="pw_search_hint">Anna avainsanoja hakeaksesi</string>
+  <string name="pw_search_history_clear">Tyhjennä hakuhistoria</string>
+  <string name="pw_splash_ignore">Ohita</string>
+  <string name="pw_ui_card_banner_btn_download">Lataa</string>
+  <string name="pw_ui_card_banner_btn_downloading">Ladataan…</string>
+  <string name="pw_ui_card_banner_btn_open">Avaa</string>
+  <string name="pw_uitype_next">Seuraava tyyppi</string>
+  <string name="pw_uitype_title">UI-tyyppi %d</string>
+  <string name="pw_video_category">Kategoriat</string>
+  <string name="pw_video_history">Toistohistoria</string>
+  <string name="pw_video_mine">Videoni</string>
+  <string name="pw_video_offline">Paikalliset videot</string>
+  <string name="recommend_online_switch">Online suositukset</string>
+  <string name="recommend_online_tips">Ota käyttöön saadaksesi suositeltuja online-videoita</string>
+  <string name="recommend_page_replay">UUSINTA</string>
+  <string name="retry">Yritä uudelleen</string>
+  <string name="revoke">Peruuta</string>
+  <string name="s1">Tallenna kuva</string>
+  <string name="s2">Sallitaanko mainoksen tallentaa kuva Kuvagalleriaan?</string>
+  <string name="s3">Hyväksy</string>
+  <string name="s4">Kiellä</string>
+  <string name="s5">Luo kalenteritapahtuma</string>
+  <string name="s6">Sallitaanko mainoksen luoda kalenteritapahtuma?</string>
+  <string name="save">Tallenna</string>
+  <string name="screenrecord_cancel">Yhteensopivuusongelmia</string>
+  <string name="screenrecord_nosupport_record">Näytön nauhoittaja ei ole tällä hetkellä tuettu tällä laitteella.</string>
+  <string name="search">Haku</string>
+  <string name="search_menu_title">Haku</string>
+  <string name="selectall">Valitse kaikki</string>
+  <string name="selectnull">Poista valinnat</string>
+  <string name="session_create_error">Palvelin palautti SESSION CREATE ERROR -virheen, ota yhteyttä SDK-kehittäjiin!</string>
+  <string name="storage_permission_denied">Tallennustilan käyttöoikeus estettiin</string>
+  <string name="t_downloading">Ladataan:</string>
+  <string name="t_exit_app">Poistu napauttamalla uudelleen.</string>
+  <string name="t_lv_check_delete_history">Valitse poistettavat kohteet</string>
+  <string name="t_lv_check_hide_file">Valitse piilotettavat videot</string>
+  <string name="t_lv_check_unhide_file">Valitse piilosta poistettavat videot</string>
+  <string name="t_lv_downloading_new_version">Ladataan päivityksiä…</string>
+  <string name="t_lv_no_new_version">Mi Video on ajan tasalla.</string>
+  <string name="t_lv_password_limit">Salasanan on oltava vähintään 4 merkkiä pitkä</string>
+  <string name="t_lv_password_null">Salasana ei voi olla tyhjä</string>
+  <string name="t_lv_password_wrong">Salasana on virheellinen. Yritä uudelleen.</string>
+  <string name="t_lv_search_null">Anna avainsanoja hakeaksesi</string>
+  <string name="t_lv_subtitle_padding_default_hint">Säädetään tekstitykisä…</string>
+  <string name="t_network_error">Tapahtui verkkovirhe.</string>
+  <string name="t_ovp_check_delete_favor">Valitse poistettavat kohteet</string>
+  <string name="t_start_download">Aloita lataaminen:</string>
+  <string name="txt_cancel_download">PERUUTA SIIRTO</string>
+  <string name="txt_download_complete">Lataus valmis</string>
+  <string name="txt_watch_now">KATSO NYT</string>
+  <string name="ui_log_tip">Napauta tätä aluetta piilottaaksesi, paina ja pidä pohjassa tyhjentääksesi vanhat lokitiedot. Raahaa lokitiedot manuaalisesti.</string>
+  <string name="update">Päivitä</string>
   <string name="v_app_name">Mi Video</string>
-  <string name="v_pw_need_update_app">Update Mi Video to use all its features</string>
-  <string name="xiaomi_update_sdk_bytes_unit">%1$sB</string>
-  <string name="xiaomi_update_sdk_connect_download_manager_fail">Connect Download Manager failed, please check the Download Manager state in the Application Management.</string>
-  <string name="xiaomi_update_sdk_dialog_message">"Introducing version %1$s
-Size: %2$s"</string>
-  <string name="xiaomi_update_sdk_dialog_message_diff">"Introducing version %1$s
-Delta update size: %2$s"</string>
-  <string name="xiaomi_update_sdk_dialog_title">%1$s update!</string>
-  <string name="xiaomi_update_sdk_external_storage_unavailable">Storage unavailable, please check the SD card.</string>
-  <string name="xiaomi_update_sdk_kilobytes_unit">%1$sKB</string>
-  <string name="xiaomi_update_sdk_megabytes_unit">%1$sMB</string>
+  <string name="v_pw_need_update_app">Päivitä Mi Video käyttääksesi sen kaikkia ominaisuuksia</string>
+  <string name="xiaomi_update_sdk_bytes_unit">%1$s t</string>
+  <string name="xiaomi_update_sdk_connect_download_manager_fail">Yhdistäminen Latauksien hallintaan epäonnistui, tarkista Latauksien hallinnan tila Sovellusten hallinnasta.</string>
+  <string name="xiaomi_update_sdk_dialog_message">"Esittelyssä versio %1$s
+Koko: %2$s"</string>
+  <string name="xiaomi_update_sdk_dialog_message_diff">"Esittelyssä versio %1$s
+Delta-päivityksen koko: %2$s"</string>
+  <string name="xiaomi_update_sdk_dialog_title">%1$s päivitys!</string>
+  <string name="xiaomi_update_sdk_external_storage_unavailable">Tallennustila ei ole käytettävissä, tarkista SD-kortti.</string>
+  <string name="xiaomi_update_sdk_kilobytes_unit">%1$s Kt</string>
+  <string name="xiaomi_update_sdk_megabytes_unit">%1$s Mt</string>
 </resources>
